test/parser/input_programs/invalid_programs/program2.deeg
for > in arr then str++ end